azure-marketplace-master/tps3/mainTemplate.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "vmCount": {
            "type": "int",
            "defaultValue": 1
        },
        "virtualMachineName": {
            "type": "string"
        },
        "virtualMachineSize": {
            "type": "string",
            "defaultValue": "Standard_D16_v3",
            "metadata": {
                "description": "Only D series are allowed for nested virtualization."
            }
        },
        "trainerId": {
            "type": "string",
            "defaultValue": "trainer",
            "metadata": {
                "description": "A tag added to show ownership"
            }
        },
        "allowInternetOutbound": {
            "type": "bool",
            "defaultValue": "[bool('false')]",
            "metadata": {
                "description": "Allows VM to communicate out to public internet. Default is False"
            }
        },
        "dnsLabelPrefix": {
            "type": "string",
            "defaultValue": "[parameters('virtualMachineName')]",
            "metadata": {
                "description": "This will be the name for your VM's FQDN url. Default uses your Virtual Machine Name."
            }
        },
        "hardDiskType": {
            "type": "string",
			      "defaultValue": "Standard_LRS"
        },
        "adminUsername": {
            "type": "string",
            "defaultValue": "instructor"
        },
        "adminPassword": {
            "type": "securestring"
        },
        "addressPrefix": {
            "type": "string",
            "defaultValue": "192.168.1.0/24"
        },
        "subnetName": {
            "type": "string",
            "defaultValue": "default"
        },
        "subnetPrefix": {
            "type": "string",
            "defaultValue": "192.168.1.0/24"
        },
        "publicIpAddressType": {
            "type": "string",
            "defaultValue": "Dynamic"
        },
        "publicIpAddressSku": {
            "type": "string",
            "defaultValue": "Basic"
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]"
        }
    },
    "variables": {
        "GUID": "pid-4d9171cd-be81-49bf-b494-ee402ebfd6bd",
        "imageSKU": "tps3",
        "imagePublisher": "a10networks1596136698788", 
        "imageOffer": "a10training-tps",

        "tags": {
            "Course": "[resourceGroup().name]",
            "Trainer": "[parameters('trainerId')]",
            "Pod": "[parameters('virtualMachineName')]"
        },
        "vNetName": "[concat(parameters('virtualMachineName'), '-vnet')]",
        "netIfaceName": "[concat(parameters('virtualMachineName'), '-nic')]",
        "publicIPName": "[concat(parameters('virtualMachineName'), '-publicip')]",
        "secGroupName": "[concat(parameters('virtualMachineName'), '-secgroup')]",

        "secRule-DenyInternet":  [
            {
                "name": "AllowVNC",
                "properties": {
                    "priority": 300,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "5901"
                }
            },
            {
                "name": "AllowSSH",
                "properties": {
                    "priority": 400,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "22"
                }
            },
            {
                "name": "AllowKVMSSH",
                "properties": {
                    "priority": 500,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "2222"
                }
            },
            {
                "name": "AllowRDP",
                "properties": {
                    "priority": 600,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "3389"
                }
            },
            {
                "name": "AllowHTTP",
                "properties": {
                    "priority": 690,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "80"
                }
            },
            {
                "name": "AllowHTTPS",
                "properties": {
                    "priority": 700,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "443"
                }
            },
            {
                "name": "AllowNoVNC",
                "properties": {
                    "priority": 800,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "6080"
                }
            },
            {
                "name": "DenyInternetOutbound",
                "properties": {
                    "priority": 1000,
                    "protocol": "*",
                    "sourcePortRange": "*",
                    "destinationPortRange": "*",
                    "sourceAddressPrefix": "*",
                    "destinationAddressPrefix": "Internet",
                    "access": "Deny",
                    "direction": "Outbound"
                }
            }
        ],

        "secRule-AllowInternet": [
             {
                "name": "AllowVNC",
                "properties": {
                    "priority": 300,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "5901"
                }
            },
            {
                "name": "AllowSSH",
                "properties": {
                    "priority": 400,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "22"
                }
            },
            {
                "name": "AllowKVMSSH",
                "properties": {
                    "priority": 500,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "2222"
                }
            },
            {
                "name": "AllowRDP",
                "properties": {
                    "priority": 600,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "3389"
                }
            },
            {
                "name": "AllowHTTP",
                "properties": {
                    "priority": 690,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "80"
                }
            },
            {
                "name": "AllowHTTPS",
                "properties": {
                    "priority": 700,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "443"
                }
            },
            {
                "name": "AllowNoVNC",
                "properties": {
                    "priority": 800,
                    "protocol": "TCP",
                    "access": "Allow",
                    "direction": "Inbound",
                    "sourceAddressPrefix": "*",
                    "sourcePortRange": "*",
                    "destinationAddressPrefix": "*",
                    "destinationPortRange": "6080"
                }
            }
        ]
    },
    "resources": [
        { 
            "name": "[variables('GUID')]",
            "apiVersion": "2019-05-01",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": []
                }
            }
        },
        {
            "name": "[concat(parameters('virtualMachineName'), '-', copyIndex(1))]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "plan": {
                "name": "[variables('imageSKU')]",
                "publisher": "[variables('imagePublisher')]",
                "product": "[variables('imageOffer')]"
            },
            "location": "[parameters('location')]",
            "tags":  "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('netIfaceName'), '-', copyIndex(1)))]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "studentrd",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('virtualMachineSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[variables('imagePublisher')]",
                        "offer": "[variables('imageOffer')]",
                        "sku": "[variables('imageSKU')]",
                        "version": "latest"
                    }, 

                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('hardDiskType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('netIfaceName'), '-', copyIndex(1)))]"
                        }
                    ]
                }
            },
            "copy": {
                "name": "vmCopy",
                "count": "[parameters('vmCount')]"
            }
        },
        {
            "name": "[concat(variables('netIfaceName'), '-', copyIndex(1))]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[parameters('location')]",
            "tags":  "[variables('tags')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIpAddresses', concat(variables('publicIPName'),'-',copyIndex(1)))]",
                "[resourceId('Microsoft.Network/virtualNetworks', concat(variables('vNetName'),'-',copyIndex(1)))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('secGroupName'),'-',copyIndex(1)))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', concat(variables('vNetName'),'-',copyIndex(1)), parameters('subnetName'))]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIpAddress": "192.168.1.100",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', concat(variables('publicIPName'),'-',copyIndex(1)))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(variables('secGroupName'),'-',copyIndex(1)))]"
                }
            },
            "copy": {
                "name": "ifaceCopy",
                "count": "[parameters('vmCount')]"
            }
        },
        {
            "name": "[concat(variables('publicIPName'),'-',copyIndex(1))]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "2019-11-01",
            "location": "[parameters('location')]",
            "tags":  "[variables('tags')]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('publicIpAddressType')]",
                "dnsSettings": {
                    "domainNameLabel": "[concat(toLower(parameters('dnsLabelPrefix')),'-', copyIndex(1))]"
                }
            },
            "sku": {
                "name": "[parameters('publicIpAddressSku')]"
            },
            "copy": {
                "name": "publicIPCopy",
                "count": "[parameters('vmCount')]"
            }
        },
        {
            "name": "[concat(variables('vNetName'),'-',copyIndex(1))]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[parameters('location')]",
            "tags":  "[variables('tags')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('addressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetPrefix')]"
                        }
                    }
                ]
            },
            "copy": {
                "name": "vnetCopy",
                "count": "[parameters('vmCount')]"
            }
        },
        {
            "name": "[concat(variables('secGroupName'),'-',copyIndex(1))]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2019-11-01",
            "location": "[parameters('location')]",
            "tags":  "[variables('tags')]",
            "properties": {
                "securityRules": "[if(parameters('allowInternetOutbound'), variables('secRule-AllowInternet'), variables('secRule-DenyInternet'))]"
            },
            "copy": {
                "name": "secGroupCopy",
                "count": "[parameters('vmCount')]"
            }
        }
    ],
    "outputs": {
        "podAccessURL": {
            "type": "array",
            "copy": {
                "count": "[parameters('vmCount')]",
                "input": "[reference(resourceId('Microsoft.Network/publicIpAddresses', concat(variables('publicIPName'),'-',copyIndex(1)))).dnsSettings.fqdn]"
            }
        }
    }
}
